--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "sass": "^1.42.1"
     },
     "dependencies": {
+        "@parcel/transformer-sass": "^2.0.0-alpha.3",
         "ejs": "^3.1.6",
         "lodash": "^4.17.21",
         "uuid": "^8.3.2"
